--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -1,563 +1,124 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:400,700&display=swap");
-
-:root {
-  --page-header-bgColor: #242e42;
-  --page-header-bgColor-hover: #1d2636;
-  --page-header-txtColor: #dde9f8;
-  --page-header-headingColor: #7889a4;
-  --page-header-width: 220px;
-  --page-content-bgColor: #f0f1f6;
-  --page-content-txtColor: #171616;
-  --page-content-blockColor: #fff;
-  --white: #fff;
-  --black: #333;
-  --blue: #00b9eb;
-  --red: #ec1848;
-  --border-radius: 4px;
-  --box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.075);
-  --switch-bgLightModeColor: #87cefa;
-  --switch-sunColor: gold;
-  --switch-moonColor: #f4f4f4;
-  --switch-bgDarkModeColor: #1f1f27;
+#sidebar {
+  overflow: hidden;
+  z-index: 3;
 }
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-ul {
-  list-style: none;
-}
-
-a,
-button {
-  color: inherit;
-}
-
-a {
-  text-decoration: none;
-}
-
-button {
-  background: none;
-  cursor: pointer;
-}
-
-[type="checkbox"] {
-  position: absolute;
-  left: -9999px;
-}
-
-label {
-  cursor: pointer;
-}
-
-button,
-input {
-  border: none;
-}
-
-svg {
-  display: block;
-}
-
-body {
-  font: 16px/1.5 "Lato", sans-serif;
-}
-
-
-/* HEADER STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.page-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: auto;
-  padding-top: 20px;
-  width: var(--page-header-width);
-  color: var(--page-header-txtColor);
-  background: var(--page-header-bgColor);
-}
-
-/*In case you prefer an absolutely positioned header that covers the full page height, add these styles*/
-/*body {
-  position: relative;
-}
-
-.page-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-}*/
-
-/*remove these styles*/
-/*.page-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: auto;
-}*/
-
-.page-header nav {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-}
-
-.page-header .logo {
-  display: block;
-  margin: 0 15px;
-}
-
-.page-header .logo svg {
-  max-width: 120px;
-  fill: var(--white);
-}
-
-.page-header .toggle-mob-menu {
-  display: none;
-  margin-left: 5px;
-  padding: 4px;
-  background: var(--page-content-blockColor);
-  border-radius: var(--border-radius);
-}
-
-.page-header .toggle-mob-menu svg {
-  fill: var(--black);
-  transition: transform 0.2s;
-}
-
-.page-header .admin-menu {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  margin-top: 35px;
-}
-
-.page-header .admin-menu li:nth-last-child(2) {
-  margin-bottom: 35px;
-}
-
-.page-header .admin-menu li:last-child {
-  margin-top: auto;
-  margin-bottom: 20px;
-}
-
-.page-header .admin-menu li > * {
-  width: 100%;
-  padding: 12px 15px;
-}
-
-.page-header .admin-menu .switcher {
-  display: inline-block;
-  width: auto;
-}
-
-.page-header .admin-menu .menu-heading h3 {
-  text-transform: uppercase;
-  letter-spacing: 0.15em;
-  font-size: 12px;
-  margin-top: 12px;
-  color: var(--page-header-headingColor);
-}
-
-.page-header .admin-menu svg {
-  width: 20px;
-  height: 20px;
-  fill: var(--page-header-txtColor);
-  margin-right: 10px;
-}
-
-.page-header .admin-menu a,
-.page-header .admin-menu button {
-  display: flex;
-  align-items: center;
-  font-size: 0.9rem;
-}
-
-.page-header .admin-menu a:hover,
-.page-header .admin-menu a:focus,
-.page-header .admin-menu button:hover,
-.page-header .admin-menu button:focus {
-  background: var(--page-header-bgColor-hover);
-  color: var(--blue);
-  outline: none;
-}
-
-.page-header .admin-menu a:hover svg,
-.page-header .admin-menu a:focus svg,
-.page-header .admin-menu button:hover svg,
-.page-header .admin-menu button:focus svg {
-  fill: var(--blue);
-}
-
-
-/* PAGE CONTENT STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.page-content {
-  position: relative;
-  left: var(--page-header-width);
-  width: calc(100% - var(--page-header-width));
+#sidebar .list-group {
+  min-width: 400px;
+  background-color: #191919;
   min-height: 100vh;
-  padding: 30px;
-  color: var(--page-content-txtColor);
-  background: var(--page-content-bgColor);
+}
+#sidebar i {
+  margin-right: 6px;
 }
 
-.search-and-user {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  grid-column-gap: 50px;
-  align-items: center;
-  background: var(--page-content-bgColor);
-  margin-bottom: 30px;
+#sidebar .list-group-item {
+  border-radius: 0;
+  background-color: #191919;
+  color: #EEE;
+  border-left: 0;
+  border-right: 0;
+  border-color: #262626;
+  white-space: nowrap;
 }
 
-.search-and-user form {
-  position: relative;
+/* highlight active menu */
+#sidebar .list-group-item:not(.collapsed) {
+  background-color: #161616;
 }
 
-.search-and-user [type="search"] {
-  width: 100%;
-  height: 50px;
-  font-size: 1.5rem;
-  padding-left: 15px;
-  background: var(--page-content-blockColor);
-  color: var(--white);
-  border-radius: var(--border-radius);
-  box-shadow: var(--box-shadow);
+/* closed state */
+#sidebar .list-group .list-group-item[aria-expanded="false"]::after {
+content: "\f0d7";
+font-family: FontAwesome;
+display: inline;
+text-align: right;
+padding-left: 5px;
 }
 
-.search-and-user ::placeholder {
-  color: var(--page-content-txtColor);
+/* open state */
+#sidebar .list-group .list-group-item[aria-expanded="true"] {
+background-color: #222;
+}
+#sidebar .list-group .list-group-item[aria-expanded="true"]::after {
+content: "";
+font-family: FontAwesome;
+display: inline;
+text-align: right;
+padding-left: 5px;
 }
 
-.search-and-user form svg {
-  width: 26px;
-  height: 26px;
-  fill: var(--page-content-txtColor);
+/* level 1*/
+#sidebar .list-group .collapse .list-group-item,
+#sidebar .list-group .collapsing .list-group-item  {
+padding-left: 20px;
 }
 
-.search-and-user form button {
-  position: absolute;
-  top: 50%;
-  right: 15px;
-  transform: translateY(-50%);
+/* level 2*/
+#sidebar .list-group .collapse > .collapse .list-group-item,
+#sidebar .list-group .collapse > .collapsing .list-group-item {
+padding-left: 30px;
 }
 
-.search-and-user .admin-profile {
-  display: flex;
-  align-items: center;
+/* level 3*/
+#sidebar .list-group .collapse > .collapse > .collapse .list-group-item {
+padding-left: 40px;
 }
 
-.search-and-user .admin-profile .greeting {
-  margin: 0 10px 0 20px;
-}
-
-.search-and-user .admin-profile svg {
-  width: 30px;
-  height: 30px;
-}
-
-.search-and-user .admin-profile .notifications {
-  position: relative;
-}
-
-.search-and-user .admin-profile .badge {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: -10px;
-  right: -3px;
-  width: 18px;
-  height: 18px;
-  border-radius: 50%;
-  font-size: 10px;
-  color: var(--white);
-  background: var(--red);
-}
-
-.page-content .grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 30px;
-}
-
-.page-content .grid > article {
-  display: flex;
-  height: 300px;
-  background: var(--page-content-blockColor);
-  border-radius: var(--border-radius);
-  box-shadow: var(--box-shadow);
-}
-
-.page-content .grid > article:first-child,
-.page-content .grid > article:last-child {
-  grid-column: 1 / -1;
-}
-
-
-/* MQ RULES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-@media screen and (max-width: 767px) {
-  .page-header,
-  .page-content {
-    position: static;
-    width: 100%;
+@media (max-width:768px) {
+  #sidebar {
+      min-width: 35px;
+      max-width: 40px;
+      overflow-y: auto;
+      overflow-x: visible;
+      transition: all 0.25s ease;
+      transform: translateX(-45px);
+      position: fixed;
+  }
+  
+  #sidebar.show {
+      transform: translateX(0);
   }
 
-  .page-header {
-    padding: 10px;
+  #sidebar::-webkit-scrollbar{ width: 0px; }
+  
+  #sidebar, #sidebar .list-group {
+      min-width: 1px;
+      overflow: visible;
   }
-
-  .page-header nav {
-    flex-direction: row;
+  /* overlay sub levels on small screens */
+  #sidebar .list-group .collapse.show, #sidebar .list-group .collapsing {
+      position: relative;
+      z-index: 1;
+      width: 190px;
+      top: 0;
   }
-
-  .page-header .logo {
-    margin: 0;
+  #sidebar .list-group > .list-group-item {
+      text-align: center;
+      padding: .75rem .5rem;
   }
-
-  .page-header .logo svg {
-    width: 83px;
-    height: 35px;
-  }
-
-  .page-header .toggle-mob-menu {
-    display: block;
-  }
-
-  .page-header .admin-menu {
-    position: absolute;
-    left: 98px;
-    top: 57px;
-    margin-top: 0;
-    z-index: 2;
-    border-radius: var(--border-radius);
-    background: var(--page-header-bgColor);
-    visibility: hidden;
-    opacity: 0;
-    transform: scale(0.95);
-    transition: all 0.2s;
-  }
-
-  .page-header .admin-menu li:nth-last-child(2) {
-    margin-bottom: 12px;
-  }
-
-  .page-header .admin-menu li:last-child button,
-  .search-and-user .admin-profile .greeting {
-    display: none;
-  }
-
-  .page-content {
-    min-height: 0;
-    padding: 10px;
-  }
-
-  .page-content .grid {
-    grid-gap: 10px;
-  }
-
-  .search-and-user {
-    position: absolute;
-    left: 131px;
-    top: 10px;
-    padding: 0;
-    grid-column-gap: 5px;
-    width: calc(100% - 141px);
-    border-radius: var(--border-radius);
-    background: transparent;
-  }
-
-  .search-and-user [type="search"] {
-    font-size: 1rem;
-    height: 35px;
-  }
-
-  .search-and-user form svg {
-    width: 18px;
-    height: 18px;
-  }
-
-  .search-and-user .admin-profile svg {
-    fill: var(--white);
+  /* hide caret icons of top level when collapsed */
+  #sidebar .list-group > .list-group-item[aria-expanded="true"]::after,
+  #sidebar .list-group > .list-group-item[aria-expanded="false"]::after {
+      display:none;
   }
 }
 
-@media screen and (max-width: 400px) {
-  .page-content .grid > article {
-    grid-column: 1 / -1;
-  }
+.collapse.show {
+visibility: visible;
 }
-
-
-/* BODY CLASSES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.mob-menu-opened .toggle-mob-menu svg {
-  transform: rotate(180deg);
+.collapsing {
+visibility: visible;
+height: 0;
+-webkit-transition-property: height, visibility;
+transition-property: height, visibility;
+-webkit-transition-timing-function: ease-out;
+transition-timing-function: ease-out;
 }
-
-.mob-menu-opened .page-header .admin-menu {
-  transform: scale(1);
-  visibility: visible;
-  opacity: 1;
-}
-
-@media screen and (min-width: 768px) {
-  .collapsed .page-header {
-    width: 40px;
-  }
-
-  .collapsed .page-header .admin-menu li > * {
-    padding: 10px;
-  }
-
-  .collapsed .page-header .logo,
-  .collapsed .page-header .admin-menu span,
-  .collapsed .page-header .admin-menu .menu-heading {
-    display: none;
-  }
-
-  .collapsed .page-header .admin-menu svg {
-    margin-right: 0;
-  }
-
-  .collapsed .page-header .collapse-btn svg {
-    transform: rotate(180deg);
-  }
-
-  .collapsed .page-content {
-    left: 40px;
-    width: calc(100% - 40px);
-  }
-}
-
-
-/* SWITCH STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.switch label {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-column-gap: 10px;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.switch span:first-child {
-  position: relative;
-  width: 50px;
-  height: 26px;
-  border-radius: 15px;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.4);
-  background: var(--switch-bgLightModeColor);
-  transition: all 0.3s;
-}
-
-.switch span:first-child::before,
-.switch span:first-child::after {
-  content: "";
-  position: absolute;
-  border-radius: 50%;
-}
-
-.switch span:first-child::before {
-  top: 1px;
-  left: 1px;
-  width: 24px;
-  height: 24px;
-  background: var(--white);
-  z-index: 1;
-  transition: transform 0.3s;
-}
-
-.switch span:first-child::after {
-  top: 50%;
-  right: 8px;
-  width: 10px;
-  height: 10px;
-  transform: translateY(-50%);
-  background: var(--switch-sunColor);
-  box-shadow: 0 0 4px 2px #ffdb1a;
-}
-
-.switch [type="checkbox"]:checked + label span:first-child {
-  background: var(--switch-bgDarkModeColor);
-}
-
-.switch [type="checkbox"]:focus + label span:first-child {
-  box-shadow: 0 3px 5px rgba(255, 255, 255, 0.25);
-}
-
-.switch [type="checkbox"]:checked + label span:first-child::before {
-  transform: translateX(24px);
-}
-
-.switch [type="checkbox"]:checked + label span:first-child::after {
-  left: 12px;
-  width: 15px;
-  height: 15px;
-  background: transparent;
-  box-shadow: -2px -5px 0 var(--switch-moonColor);
-  transform: translateY(-50%) rotate(-72deg);
-}
-
-
-/* LIGHT MODE STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.light-mode {
-  --page-header-bgColor: #f1efec;
-  --page-header-bgColor-hover: #b9e4e0;
-  --page-header-txtColor: #2c303a;
-  --page-header-headingColor: #979595;
-  --page-content-bgColor: #fff;
-  --box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.25);
-}
-
-.light-mode .page-header .admin-menu a:hover,
-.light-mode .page-header .admin-menu a:focus,
-.light-mode .page-header .admin-menu button:hover,
-.light-mode .page-header .admin-menu button:focus {
-  color: var(--black);
-}
-
-.light-mode .page-header .logo svg,
-.light-mode .page-header .admin-menu a:hover svg,
-.light-mode .page-header .admin-menu a:focus svg,
-.light-mode .page-header .admin-menu button:hover svg,
-.light-mode .page-header .admin-menu button:focus svg {
-  fill: var(--black);
-}
-
-.light-mode .switch [type="checkbox"]:focus + label span:first-child {
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
-}
-
-@media screen and (max-width: 767px) {
-  .light-mode .search-and-user .admin-profile svg {
-    fill: var(--black);
-  }
-}
-
-
-/* FOOTER
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.page-footer {
-  font-size: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  margin-top: 10px;
-}
-
-.page-footer a {
-  margin-left: 4px;
+.collapsing.width {
+-webkit-transition-property: width, visibility;
+transition-property: width, visibility;
+width: 0;
+height: 100%;
+-webkit-transition-timing-function: ease-out;
+transition-timing-function: ease-out;
 }
