--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -7,18 +7,19 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    color: #fff;
 
 }
 .login {
     width: 400px;
     height: 450px;
-    background-color: #fff;
+    background-color: #0a131f;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
     padding: 20px;
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.5);
 }
 body{
-    background-color: #E7E5DF;
+    background-color: #22344b;
 }
 .avatar{
     width: 70px;
@@ -34,7 +35,21 @@ body{
 
 }
 .btn-primary{
-    background-color: #125E8A;
+    background-color:  #22344b;
     border: none;
     width: 100%;
+}
+#email, #password{
+    background-color: #0a131f;
+    border: none;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+    border-radius: 0;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+h3{
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: 700;
 }
