--- a/public/assets/css/signup.css
+++ b/public/assets/css/signup.css
@@ -3,19 +3,21 @@
 font-family: 'Roboto', sans-serif;
 }
 body{
-    background-color: #E7E5DF;
+    background-color: #22344b;
     font-family: 'Roboto', sans-serif;}
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    color: #fff;
 }
 .signup {
     width: 400px;
-    background-color: #fff;
+    background-color: #0a131f;
     border-radius: 10px;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     padding: 20px;
+    box-shadow: 0 0 50px 0 rgba(0,0,0,0.5);
 }
 .avatar {
     width: 70px;
@@ -30,5 +32,19 @@ body{
 }
 .btn-primary{
     width: 100%; 
-    background-color: #125E8A;  
+    background-color: #22344b;
+    border: none; 
+}
+#name, #surname, #email, #password, #phone, #confirm-password{
+    background-color: #0a131f;
+    border: none;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+    border-radius: 0;
+    padding: 10px;
+}
+h3{
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: 700;
 }
